Fix DevMap on mobile and improve update page message readability

--- a/src/components/DevMap/DevMapContainer/DevMapContainer.module.scss
+++ b/src/components/DevMap/DevMapContainer/DevMapContainer.module.scss
@@ -6,5 +6,6 @@
     height: 100%;
     gap: 1rem;
     justify-content: center;
+    flex-wrap: wrap;
   }
 }
