--- a/src/components/Devmap/DevMap.module.scss
+++ b/src/components/Devmap/DevMap.module.scss
@@ -25,9 +25,11 @@
     margin-top: 0;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
+    min-height: 4rem;
   }
 
   .description {
     font-size: 1rem;
+    padding: 1rem;
   }
 }
